<resources>
    <string name="app_name">Registro Empresas</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_url">Url</string>
    <string name="hint_phone">Telefono</string>
    <string name="hint_email">Email</string>ç
    <string name="hint_prod_serv">Producto o Servicio</string>
    <string name="hint_classification">Clasificación</string>
    <string name="quit_question">Salir?</string>
    <string name="update_question">Actualizar registro?</string>
    <string name="delete_question">Desea eliminar el registro?</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
</resources>